@startuml

title __ADAPTER's Class Diagram__\n


    namespace om.example.adapter {
      interface com.example.adapter.Adaptee {
          {abstract} + delete()
          {abstract} + display()
          {abstract} + find()
          {abstract} + insert()
      }
    }

  

    namespace om.example.adapter {
      class com.example.adapter.Adaptor {
          + Adaptor()
          + delete()
          + display()
          + find()
          + insert()
      }
    }

  


    namespace om.example.adapter {
      class com.example.adapter.HelloApplication {
          {static} + main()
          + start()
      }
    }

  


    namespace om.example.adapter {
      class com.example.adapter.HelloController {
          + input : TextField
          + listItems : ListView
          + addValue()
          + draw()
          + initialize()
          # onHelloButtonClick()
      }
    }

  

    namespace om.example.adapter {
      class com.example.adapter.OrdArray {
          - a : long[]
          - nElems : int
          + OrdArray()
          + delete()
          + display()
          + find()
          + insert()
          + size()
      }
    }

  

  com.example.adapter.Adaptor .up.|> com.example.adapter.Adaptee
  com.example.adapter.Adaptor o-- com.example.adapter.OrdArray : ordArray
  com.example.adapter.HelloApplication -up-|> javafx.application.Application
  com.example.adapter.HelloController .up.|> javafx.fxml.Initializable
  com.example.adapter.HelloController o-- com.example.adapter.Adaptor : adaptor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
